--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Show de Bola</string>
+
+    <!-- Close App -->
+    <string name="message_close_app">Pressione novamente para fechar o app</string>
 </resources>
